--- a/app/views/notices/show.html.haml
+++ b/app/views/notices/show.html.haml
@@ -1,10 +1,11 @@
-#tearshape
+#roundshape
+  = link_to t('global.edit'), edit_notice_path(@notice)
+  |
+  \#{link_to t('global.back'), notices_path}
+.bordershape
   %p
     %b= t 'global.title'
     = @notice.title
   %p
     %b= t 'global.content'
     = @notice.content
-  = link_to t('global.edit'), edit_notice_path(@notice)
-  |
-  \#{link_to t('global.back'), notices_path}
