--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -97,6 +97,12 @@
     = t 'formtastic.labels.task.takeover_time'
     = l @task.takeover_time if @task.takeover_time
     %br
+    = t 'formtastic.labels.task.pay_time'
+    = l @task.pay_time if @task.pay_time
+    %br
+    = t 'formtastic.labels.task.transport_time'
+    = l @task.transport_time if @task.transport_time
+    %br
     = t 'formtastic.labels.task.finished_time'
     = l @task.finished_time if @task.finished_time
     %br
