update first page displays tyle

--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -317,7 +317,7 @@ padding: 1px 4px 15px 5px;
 /*html{font-size:62.5%}
 body{font-size:1.2em;color:#294f88}*/
 /*.customer_service {margin:10px;border:1px solid #92cdec;background:#d7e7ff;padding:30px 30px 0 30px}*/
-.customer_service {margin:10px;border-bottom:1px solid #92cdec;padding:30px 30px 0 30px; background:url(/images/manager.png) no-repeat right }
+.customer_service {margin:10px;border:1px solid #92cdec;padding:30px 30px 0 30px; background:url(/images/book.png) no-repeat right }
 /*h1{margin:0;padding:0 0 30px 0;font-size:2em}
 h2{margin:0;padding:10px 0 5px 0;font-size:1.5em;clear:both}
 p{font-size:1.2em;line-height:170%;margin-bottom:30px;clear:both}
