--- a/public/stylesheets/compiled/site.css
+++ b/public/stylesheets/compiled/site.css
@@ -374,9 +374,9 @@ body{font-size:1.2em;color:#294f88}*/
 /* line 320, ../../../app/stylesheets/site.scss */
 .customer_service {
   margin: 10px;
-  border-bottom: 1px solid #92cdec;
+  border: 1px solid #92cdec;
   padding: 30px 30px 0 30px;
-  background: url(/images/manager.png) no-repeat right;
+  background: url(/images/book.png) no-repeat right;
 }
 
 /*h1{margin:0;padding:0 0 30px 0;font-size:2em}
