--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -56,8 +56,9 @@
                   = link_to t('site.task'), tasks_url
                   = image_tag 'arrow.png', :width => 18, :height => 15, :align => 'top', :class => 'arrow'
                 .sub_menu
-                  = link_to t('site.new_task'), new_task_url if user?
-                  %hr
+                  - if user?
+                    = link_to t('site.new_task'), new_task_url
+                    %hr
                   = link_to t('site.task_type',:task_type=>'taobao'), :controller=>'board', :action=>'task_list', :task_type => 'taobao'
                   = link_to t('site.task_type',:task_type=>'paipai'), :controller=>'board', :action=>'task_list', :task_type => 'paipai'
                   = link_to t('site.task_type',:task_type=>'youa'), :controller=>'board', :action=>'task_list', :task_type => 'youa'
